mobile bug fix - deals section
title was not showing on this section on mobile

--- a/assets/base-overrides.css
+++ b/assets/base-overrides.css
@@ -1,3 +1,10 @@
+/* Settings */
+html, body {
+    overflow-x: hidden; /* Prevents horizontal scrolling */
+    width: 100%; /* Ensures full width usage */
+}
+
+
 /* Footer */
 footer.footer{
     margin: 0 20px;
@@ -12,11 +19,17 @@ footer .footer__content-top{
     padding: 0;
 }
 
+/* Announcement bar */
+.announcement-bar__message {
+    margin-top: 6px;
+}
+
 /* RESPONSIVE */
 @media (max-width: 750px) {
     
     /* Announcement bar */
     .announcement-bar__message {
+        margin-top: 4px;
         padding-top: 0;
         margin-bottom: 2px;
         min-height: 25px;
