--- a/assets/tailwind.output.css
+++ b/assets/tailwind.output.css
@@ -551,8 +551,14 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-1\/2 {
+    top: calc(1/2 * 100%);
+  }
   .left-0 {
     left: calc(var(--spacing) * 0);
+  }
+  .left-1\/2 {
+    left: calc(1/2 * 100%);
   }
   .isolate {
     isolation: isolate;
@@ -631,6 +637,12 @@
   }
   .mt-\[80px\] {
     margin-top: 80px;
+  }
+  .mr-0 {
+    margin-right: calc(var(--spacing) * 0);
+  }
+  .mr-0\! {
+    margin-right: calc(var(--spacing) * 0) !important;
   }
   .mb-\[10px\] {
     margin-bottom: 10px;
@@ -748,6 +760,14 @@
   }
   .border-collapse {
     border-collapse: collapse;
+  }
+  .-translate-x-1\/2 {
+    --tw-translate-x: calc(calc(1/2 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-1\/2 {
+    --tw-translate-y: calc(calc(1/2 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .transform {
     transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
@@ -1000,6 +1020,9 @@
   .opacity-60 {
     opacity: 60%;
   }
+  .opacity-70 {
+    opacity: 70%;
+  }
   .ring {
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -1071,6 +1094,14 @@
   .ease-out {
     --tw-ease: var(--ease-out);
     transition-timing-function: var(--ease-out);
+  }
+  .group-hover\:brightness-100 {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        --tw-brightness: brightness(100%);
+        filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+      }
+    }
   }
   .hover\:underline {
     &:hover {
@@ -1167,9 +1198,24 @@
       width: calc(50% - 5px);
     }
   }
+  .max-md\:w-\[calc\(100\%\)\] {
+    @media (width < 48rem) {
+      width: calc(100%);
+    }
+  }
+  .max-md\:w-\[calc\(100\%-2px\)\] {
+    @media (width < 48rem) {
+      width: calc(100% - 2px);
+    }
+  }
   .max-md\:w-\[calc\(100\%-3px\)\] {
     @media (width < 48rem) {
       width: calc(100% - 3px);
+    }
+  }
+  .max-md\:w-full {
+    @media (width < 48rem) {
+      width: 100%;
     }
   }
   .max-md\:gap-\[2px\] {
@@ -1192,6 +1238,16 @@
       padding-inline: calc(var(--spacing) * 0);
     }
   }
+  .max-md\:px-1 {
+    @media (width < 48rem) {
+      padding-inline: calc(var(--spacing) * 1);
+    }
+  }
+  .max-md\:px-10 {
+    @media (width < 48rem) {
+      padding-inline: calc(var(--spacing) * 10);
+    }
+  }
   .max-md\:text-\[14px\] {
     @media (width < 48rem) {
       font-size: 14px;
@@ -1200,6 +1256,11 @@
   .max-md\:text-\[15px\]\! {
     @media (width < 48rem) {
       font-size: 15px !important;
+    }
+  }
+  .max-sm\:mb-\[20px\] {
+    @media (width < 40rem) {
+      margin-bottom: 20px;
     }
   }
   .max-sm\:w-\[calc\(50\%-5px\)\] {
@@ -1230,6 +1291,12 @@
   .max-sm\:text-\[15px\]\! {
     @media (width < 40rem) {
       font-size: 15px !important;
+    }
+  }
+  .max-sm\:brightness-70 {
+    @media (width < 40rem) {
+      --tw-brightness: brightness(70%);
+      filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
     }
   }
   .md\:mb-\[40px\] {
@@ -1278,6 +1345,21 @@
     transform: none;
     animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
   }
+}
+@property --tw-translate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
 }
 @property --tw-rotate-x {
   syntax: "*";
